--- a/src/app/module/covid/covid.component.html
+++ b/src/app/module/covid/covid.component.html
@@ -16,7 +16,7 @@
     <div class="container-fluit ">
         <div class="row">
             <div class="col-12 text-center">
-                <h1 class="grad-text " style="font-weight: bold;">Covid 19 Information</h1>
+                <p class="stb">Covid 19 Information</p>
 
             </div>
         </div>
@@ -35,20 +35,20 @@
 
                         <h3 class="wow fadeInRight" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInRight;">Person-to-person spread</h3>
 
-                        <p class="wow fadeInRight" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInRight;">The virus is thought to spread mainly from person-to-person. Between people who are in close contact with one another (within about 6 feet). Through respiratory droplets produced when an infected person coughs or sneezes.
+                        <p class="wow fadeInRight stbs" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInRight;">The virus is thought to spread mainly from person-to-person. Between people who are in close contact with one another (within about 6 feet). Through respiratory droplets produced when an infected person coughs or sneezes.
                             These droplets can land in the mouths or noses of people who are nearby or possibly be inhaled into the lungs.</p>
 
 
                         <ul class="wow fadeInRight" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInRight;">
-                            <li>Maximum treatment on Appointment Basis.</li>
-                            <li>Following social distancing at clinics.</li>
-                            <li>Non Contact Temperature Measurement of patients and attenders at the time of entry.</li>
-                            <li>Hand Sanitization of patients and attenders.</li>
-                            <li>Pre Treatment questionnaire to ensure that the customer is not having any symptoms of Covid-19</li>
-                            <li>Doctors and Paramedical staff in complete PPE kit</li>
-                            <li>One time use of a PPE kit.</li>
-                            <li>Time to Time sanitization of clinic and operatory.</li>
-                            <li>Digital Payment options to ensure non contact.</li>
+                            <li> <p class="stbs"> Maximum treatment on Appointment Basis.</p></li>
+                            <li> <p class="stbs">Following social distancing at clinics.</p> </li>
+                            <li> <p class="stbs">Non Contact Temperature Measurement of patients and attenders at the time of entry.</p></li>
+                            <li> <p class="stbs">Hand Sanitization of patients and attenders.</p></li>
+                            <li> <p class="stbs">Pre Treatment questionnaire to ensure that the customer is not having any symptoms of Covid-19</p>  </li>
+                            <li> <p class="stbs">Doctors and Paramedical staff in complete PPE kit</p></li>
+                            <li> <p class="stbs">One time use of a PPE kit.</p></li>
+                            <li> <p class="stbs">Time to Time sanitization of clinic and operatory.</p></li>
+                            <li> <p class="stbs"> Digital Payment options to ensure non contact.</p></li>
                         </ul>
 
                     </div>
