--- a/src/app/module/covid/covid.component.html
+++ b/src/app/module/covid/covid.component.html
@@ -1,17 +1,7 @@
 <!-- Page Content -->
-<div class="content">
+<div class="content comgap bgimg ">
 
-    <!-- Breadcrumb -->
-    <div class="breadcrumb-bar gradient-bg ">
-        <div class="container-fluid">
-            <div class="row align-items-center">
-                <div class="col-md-12 col-12">
-                    <h2 class="breadcrumb-title">Covid Information</h2>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /Breadcrumb -->
+
 
     <div class="container-fluit ">
         <div class="row">
@@ -35,20 +25,38 @@
 
                         <h3 class="wow fadeInRight" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInRight;">Person-to-person spread</h3>
 
-                        <p class="wow fadeInRight stbs" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInRight;">The virus is thought to spread mainly from person-to-person. Between people who are in close contact with one another (within about 6 feet). Through respiratory droplets produced when an infected person coughs or sneezes.
-                            These droplets can land in the mouths or noses of people who are nearby or possibly be inhaled into the lungs.</p>
+                        <p class="wow fadeInRight stbs" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInRight;">The virus is thought to spread mainly from person-to-person. Between people who are in close contact with one another (within about 6 feet). Through respiratory droplets produced when an infected person coughs or sneezes. These
+                            droplets can land in the mouths or noses of people who are nearby or possibly be inhaled into the lungs.</p>
 
 
                         <ul class="wow fadeInRight" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInRight;">
-                            <li> <p class="stbs"> Maximum treatment on Appointment Basis.</p></li>
-                            <li> <p class="stbs">Following social distancing at clinics.</p> </li>
-                            <li> <p class="stbs">Non Contact Temperature Measurement of patients and attenders at the time of entry.</p></li>
-                            <li> <p class="stbs">Hand Sanitization of patients and attenders.</p></li>
-                            <li> <p class="stbs">Pre Treatment questionnaire to ensure that the customer is not having any symptoms of Covid-19</p>  </li>
-                            <li> <p class="stbs">Doctors and Paramedical staff in complete PPE kit</p></li>
-                            <li> <p class="stbs">One time use of a PPE kit.</p></li>
-                            <li> <p class="stbs">Time to Time sanitization of clinic and operatory.</p></li>
-                            <li> <p class="stbs"> Digital Payment options to ensure non contact.</p></li>
+                            <li>
+                                <p class="stbs"> Maximum treatment on Appointment Basis.</p>
+                            </li>
+                            <li>
+                                <p class="stbs">Following social distancing at clinics.</p>
+                            </li>
+                            <li>
+                                <p class="stbs">Non Contact Temperature Measurement of patients and attenders at the time of entry.</p>
+                            </li>
+                            <li>
+                                <p class="stbs">Hand Sanitization of patients and attenders.</p>
+                            </li>
+                            <li>
+                                <p class="stbs">Pre Treatment questionnaire to ensure that the customer is not having any symptoms of Covid-19</p>
+                            </li>
+                            <li>
+                                <p class="stbs">Doctors and Paramedical staff in complete PPE kit</p>
+                            </li>
+                            <li>
+                                <p class="stbs">One time use of a PPE kit.</p>
+                            </li>
+                            <li>
+                                <p class="stbs">Time to Time sanitization of clinic and operatory.</p>
+                            </li>
+                            <li>
+                                <p class="stbs"> Digital Payment options to ensure non contact.</p>
+                            </li>
                         </ul>
 
                     </div>
