--- a/src/app/module/covid/covid.component.html
+++ b/src/app/module/covid/covid.component.html
@@ -69,7 +69,7 @@
             <div class="container text-center">
                 <div class="row justify-content-center">
                     <div class="col-xl-12 d-flex flex-column align-items-center">
-                        <h2 class="wow fadeInUp grad-text" style="visibility: visible; animation-name: fadeInUp; font-weight: bolder;">CONTACT YOUR LOCAL HEALTH DEPARTMENT</h2>
+                        <!-- <h2 class="wow fadeInUp grad-text" style="visibility: visible; animation-name: fadeInUp; font-weight: bolder;">CONTACT YOUR LOCAL HEALTH DEPARTMENT</h2> -->
                         <p class="wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">Email : hospital@example.com | Fax : 1800 1245 1253</p>
 
                         <a class="wow fadeInLeft button button-primary button-shadow button-md button-xxl btn-grad" href="#" data-wow-delay=".5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInLeft;">
